Fix spacing on send one-off SMS
Previous the text input on the send one off SMS page was wrapped in
an element with a class of `form-group`. We overrode the spacing on this
element to make the links under the textbox move closer to the textbox,
so that visually they group together.

This was broken when we moved to GOV.UK frontend, which uses a class of
`govuk-form-group`. This commit changes the CSS to account for both
possibilities, because the send-a-one-off-letter page is still using a
textbox, not a text input, and textboxes haven’t moved to GOV.UK
Frontend yet.

--- a/app/assets/stylesheets/views/send.scss
+++ b/app/assets/stylesheets/views/send.scss
@@ -1,6 +1,7 @@
 .send-one-off-form {
 
-  .form-group {
+  .form-group,
+  .govuk-form-group {
     margin-bottom: 20px;
   }
 
